Fix dark mode for Setup Issues
Summary:
Replace hardcoded colors with corresponding variables (so colors can be adjusted accordingly when setting dark mode).

Note that this includes a small color change: `.setup-issue-actions` changed from hardcoded `#f5f5f5;` to very similar `#f3f5f7` (which is `{$page.background}`)

Refs T15056

Test Plan:
* Go to http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
* Enable Prototype applications via `./bin/config set phabricator.show-prototypes true`
* Install UIExamples via http://phorge.localhost/applications/view/PhabricatorUIExamplesApplication/
* Go to http://phorge.localhost/uiexample/view/PhabricatorSetupIssueUIExample/ and look at things

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26158

--- a/webroot/rsrc/css/application/config/setup-issue.css
+++ b/webroot/rsrc/css/application/config/setup-issue.css
@@ -11,7 +11,7 @@
 }
 
 .setup-issue {
-  background: #fff;
+  background: {$page.content};
   border: 1px solid #e4e5e6;
   padding: 0;
   border-radius: 5px;
@@ -30,7 +30,7 @@
 .setup-issue table th {
   text-align: right;
   width: 30%;
-  background: #F8F9FC;
+  background: {$lightbluebackground};
   border: 1px solid #e2e2e2;
   padding: 8px;
 }
@@ -45,14 +45,14 @@
   width: auto;
   border: 1px solid #e2e2e2;
   padding: 12px;
-  background: #F8F9FC;
+  background: {$lightbluebackground};
   overflow-x: auto;
   border-radius: 3px;
 }
 
 .setup-issue tt {
-  color: black;
-  background: #EBECEE;
+  color: {$blacktext};
+  background: {$greybackground};
   padding: 2px 4px;
 }
 
@@ -64,19 +64,19 @@
   font-size: 13px;
   padding: 16px;
   line-height: 20px;
-  background: rgba(71,87,120,0.08);
+  background: rgba({$alphablue},0.08);
   border-radius: 3px;
 }
 
 .setup-fatal .setup-issue-instructions {
   color: #af1404;
-  background: #f4dddb;
+  background: {$lightred};
 }
 
 .setup-issue-name {
   font-size: 15px;
   font-weight: bold;
-  color: #6B748C;
+  color: {$bluetext};
   border-bottom: 1px solid #e2e2e2;
   overflow: hidden;
   padding: 16px;
@@ -97,7 +97,7 @@
 
 .setup-issue-actions {
   padding: 12px;
-  background-color: #f5f5f5;
+  background-color: {$page.background};
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
   overflow: hidden;
